refactor: used prettier and eslint config cli and fix with write cmd

--- a/apps/docs/src/content/docs/guides/example.mdx
+++ b/apps/docs/src/content/docs/guides/example.mdx
@@ -15,17 +15,14 @@ Writing a good guide requires thinking about what your users are trying to do.
 ## Testing My First Component **Button**
 
 component =>
+
 ```tsx
 // Example Usage
 const Component = () => {
-  return (
-    <Button>
-      Testing Button
-    </Button>
-  )
-}
+  return <Button>Testing Button</Button>;
+};
 ```
 
-<Button role="danger" variant='ghost'>
+<Button role="danger" variant="ghost">
   Testing Button
 </Button>
