refactor: changed packages, imports and builds

--- a/apps/docs/src/content/docs/guides/example.mdx
+++ b/apps/docs/src/content/docs/guides/example.mdx
@@ -23,6 +23,6 @@ const Component = () => {
 };
 ```
 
-<Button role="danger" variant="ghost">
+<Button role="danger" variant="ghost" client:only="react">
   Testing Button
 </Button>
