--- a/apps/docs/src/content/docs/en/index.mdx
+++ b/apps/docs/src/content/docs/en/index.mdx
@@ -1,18 +1,18 @@
 ---
-title: Welcome to Starlight
+title: Welcome to Cat-UI Design System
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Come on to see the Cat 🐱‍🏍 project!
   image:
-    file: ../../assets/houston.webp
+    file: ../../../assets/catui-preview.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Docs Guide
+      link: /en/guides/example/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Go to the Storybook
+      link: https://catui-storybook.vercel.app/
       icon: external
 ---
 
