--- a/apps/docs/src/content/docs/es/getting-started/installation.mdx
+++ b/apps/docs/src/content/docs/es/getting-started/installation.mdx
@@ -7,6 +7,8 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Inicio Rapido
 
+Instalar el paquete con **npm**, **yarn** y **pnpm**
+
 <Tabs>
 <TabItem label="npx">
 
@@ -62,27 +64,26 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 </TabItem>
 <TabItem label="javascript">
 <img src="https://skillicons.dev/icons?i=js" alt="javascript" />
+
 `src/root.jsx`
+
 ```jsx
 import { StrictMode } from 'react';
 import ReactDOM from 'react-dom/client';
-import { CatuiTheme } from 'catui-design'
+import { CatuiTheme } from 'catui-design';
 
 import App from './App';
 
 import './index.css';
 
 ReactDOM.createRoot(document.getElementById('root')).render(
-
-{' '}
-<StrictMode>
-  <CatuiTheme>
-    <App />
-  </CatuiTheme>
-</StrictMode>, );
-
+  <StrictMode>
+    <CatuiTheme>
+      <App />
+    </CatuiTheme>
+  </StrictMode>,
+);
 ```
 
 </TabItem>
 </Tabs>
-```
