--- a/apps/docs/src/content/docs/en/getting-started/installation.mdx
+++ b/apps/docs/src/content/docs/en/getting-started/installation.mdx
@@ -70,7 +70,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 ```jsx
 import { StrictMode } from 'react';
 import ReactDOM from 'react-dom/client';
-import { CatuiTheme } from 'catui-design'
+import { CatuiTheme } from 'catui-design';
 
 import App from './App';
 
