fix: added missing provider to docs and width fit content to image div

--- a/apps/docs/src/content/docs/es/components/button.mdx
+++ b/apps/docs/src/content/docs/es/components/button.mdx
@@ -3,7 +3,7 @@ title: Button
 description: Documentación para los Botones
 ---
 
-import { Button } from 'catui-design';
+import { Button, CatuiTheme } from 'catui-design';
 
 Esta sera la documentación para el componente boton
 
