refactor: changed ident code

--- a/apps/docs/src/content/docs/en/components/badge.mdx
+++ b/apps/docs/src/content/docs/en/components/badge.mdx
@@ -5,7 +5,7 @@ description: Badge component
 
 import { Badge } from 'catui-design';
 
-import { Wrapper } from '../../../../components/Wrapper.tsx'
+import { Wrapper } from '../../../../components/Wrapper.tsx';
 
 this will be docs for the badge component
 
@@ -24,18 +24,12 @@ Usage Example
 <br></br>
 
 <Wrapper client:only>
-  <Badge>
-    Badge Example
-  </Badge>
+  <Badge>Badge Example</Badge>
 </Wrapper>
 
 ```jsx
 const BadgeExample = () => {
-  return (
-    <Badge>
-      Badge Example
-    </Badge>
-  );
+  return <Badge>Badge Example</Badge>;
 };
 ```
 
