--- a/apps/docs/src/content/docs/es/components/badge.mdx
+++ b/apps/docs/src/content/docs/es/components/badge.mdx
@@ -5,7 +5,7 @@ description: Badge componente
 
 import { Badge } from 'catui-design';
 
-import { Wrapper } from '../../../../components/Wrapper.tsx'
+import { Wrapper } from '../../../../components/Wrapper.tsx';
 
 Esta sera la documentación para el componente badge
 
@@ -38,4 +38,3 @@ const BadgeExample = () => {
 ### Propiedades
 
 Props
-
