--- a/apps/docs/src/content/docs/es/components/image.mdx
+++ b/apps/docs/src/content/docs/es/components/image.mdx
@@ -5,7 +5,7 @@ description: Documentación para el componente Image
 
 import { Image } from 'catui-design';
 
-import { Wrapper } from '../../../../components/Wrapper.tsx'
+import { Wrapper } from '../../../../components/Wrapper.tsx';
 
 ### Importing
 
