--- a/apps/docs/src/content/docs/en/components/button.mdx
+++ b/apps/docs/src/content/docs/en/components/button.mdx
@@ -5,7 +5,7 @@ description: Docs for the Buttons
 
 import { Button } from 'catui-design';
 
-import { Wrapper } from '../../../../components/Wrapper.tsx'
+import { Wrapper } from '../../../../components/Wrapper.tsx';
 
 this will be docs for the button component
 
