--- a/apps/docs/src/content/docs/es/components/button.mdx
+++ b/apps/docs/src/content/docs/es/components/button.mdx
@@ -5,7 +5,7 @@ description: Documentación para los Botones
 
 import { Button } from 'catui-design';
 
-import { Wrapper } from '../../../../components/Wrapper.tsx'
+import { Wrapper } from '../../../../components/Wrapper.tsx';
 
 Esta sera la documentación para el componente boton
 
